--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Chat para os amigos do cotil"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Cotil chat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
